# GenStack

./: .gitignore  CMakeLists.txt  FunctionContent.cpp  FunctionContent.h  Makefile  Operations.cpp  Operations.h  Parser.cpp  Parser.h  ParserStream.cpp  ParserStream.h  Stack.cpp  Stack.dcl  Stack.h  Value.cpp  Value.h  Variables.cpp  Variables.h  main.cpp  operations.ttd  stack.ttd  testudo.report  testudo.track
tests/: functions.ttd  operations.ttd  parserstream.ttd  stack.ttd  testudo.dcl  variables.ttd
